[project]
name = "alpha_buying"
authors = [
    { name = "Alpha Code", email = "info@alpha-code.net"}
]
description = "This system provides a centralized and efficient way to manage procurement and tendering processes comprehensively, starting from submitting requests to analyzing bids and making decisions regarding awarding contracts to suppliers."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
